# magic-agents

./: README.md  requirements.txt  setup.cfg
docs/: ARCHITECTURE.md  EXCEPTION_HANDLING_IMPROVEMENTS.md  GRAPH_VALIDATION.md  JSON_CONTRACT.md  README.md
docs/debug/: DEBUG_FEEDBACK_STRUCTURE.md  DEBUG_FIXES.md  DEBUG_MODE_EXAMPLES.md  DEBUG_MODE_OVERVIEW.md  DEBUG_MODE_USAGE.md  NODE_DEBUG_INFORMATION.md  README.md
docs/f1/: CRITICAL_ISSUES_RESOLUTION_MAP.md  EDGE_COMPATIBILITY_MATRIX.md  NODE_COMPATIBILITY_ANALYSIS.md  (+2 more)
magic_agents/: __init__.py  agt_flow.py  setup.cfg
test/: NODE_OUTPUT_GUIDE.md  README.md  conftest.py  run_all_tests.py  test_advanced_flows.py  test_advanced_flows_fixed.py  test_api_integration.py  test_browsing_flow.py  test_build.py  test_comprehensive_flows.py  test_condition_evaluator.py  test_conditional_characterization.py  test_conditional_enhanced.py  test_conditional_flows.py  test_conditional_integration.py  test_conditional_model.py  test_conditional_proof_gaps.py  test_conditional_protocol.py  test_create_node.py  test_debug_mode.py  test_debug_system.py  test_edge_cases.py  test_env_loader.py  test_event_dispatcher.py  test_example_json_integrity.py  test_fetch_mocked.py  test_graph_validation.py  test_graph_validator.py  test_hook_relay_tool_collection.py  test_image_json_example.py  test_inner_node_integration.py  test_inner_node_p0_regression.py  test_input_tracker.py  test_llm_tooling_gaps.py  test_loop_execution.py  test_loop_flows.py  test_loop_refactor.py  test_node_base.py  test_node_conditional.py  test_node_llm_tool_edges.py  (+10 more)
(+168 files in other folders)
