[metadata]
name = magic_agents
version = attr: magic_agents.__version__
author = Andres
author_email = andres@arz.ai
description = Agent builder
keywords = llm

[options]
zip_safe = True
include_package_data = True
packages = find:
install_requires =
    aioboto3>=14.3.0
    aiobotocore>=2.22.0
    aiofiles>=24.1.0
    aiohappyeyeballs>=2.6.1
    aiohttp>=3.12.9
    aioitertools>=0.11.0
    aiosignal>=1.3.1
    annotated-types>=0.6.0
    async-timeout>=4.0.3
    attrs>=23.2.0
    boto3>=1.37.3
    botocore>=1.37.3
    certifi>=2025.4.26
    charset-normalizer>=3.3.2
    exceptiongroup>=1.2.2
    filelock>=3.17.0
    frozenlist>=1.4.1
    fsspec>=2025.2.0
    huggingface-hub>=0.29.1
    idna>=3.7
    iniconfig>=2.0.0
    Jinja2>=3.1.6
    jmespath>=1.0.1
    MarkupSafe>=3.0.2
    multidict>=6.0.5
    networkx>=3.4.2
    packaging>=24.2
    pluggy>=1.5.0
    propcache>=0.3.1
    pydantic>=2.5.3
    pydantic_core>=2.14.6
    pytest>=8.3.4
    pytest-asyncio>=0.24.0
    python-dateutil>=2.9.0.post0
    PyYAML>=6.0.2
    regex>=2024.11.6
    requests>=2.32.3
    s3transfer>=0.11.3
    six>=1.16.0
    tiktoken>=0.9.0
    tokenizers>=0.21.0
    tomli>=2.2.1
    tqdm>=4.67.1
    typing_extensions>=4.11.0
    urllib3>=2.4.0
    wrapt>=1.16.0
    yarl>=1.20.0
    magic_llm @ git+https://github.com/Andres77872/magic-llm.git@702e6f0b5c59c84ab439323408d094a0ce495583

[options.packages.find]
where = .